--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   phone_state: ^1.0.3
   flutter_typeahead: ^5.1.0
   speech_to_text: ^6.6.0
+  flutter_stripe: ^10.1.1
 
 
 dependency_overrides:
