--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_typeahead: ^5.1.0
   speech_to_text: ^6.6.0
   flutter_stripe: ^10.1.1
+  intl: ^0.18.1
 
 
 dependency_overrides:
