--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   speech_to_text: ^6.6.0
   flutter_stripe: ^10.1.1
   intl: ^0.18.1
+  emoji_picker_flutter: ^2.2.0
 
 
 dependency_overrides:
