--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
     <uses-permission android:name="android.permission.RECORD_VIDEO" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
-
+<uses-permission android:name="android.permission.RECORD_AUDIO" />
+<!-- Optional: Add this permission if you want to use bluetooth telephony device like headset/earbuds -->
+<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+<!-- Optional: Add this permission if you want to save your recordings in public folders -->
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:name="${applicationName}"
         android:enableOnBackInvokedCallback="false"
